improvements exception handler and validation message